package src.model;

public interface Ability {
    int cast();
}
