package src.model;

public class Enemy extends Player {
    Enemy( String name ) {
        super( name );
    }
}
