package src.model;

public class Hero extends Player {
    Hero( String name ){
        super( name );
    }
}
