package src.model;

import java.util.ArrayList;

public class World {
    private ArrayList<GameObejct> gameObejcts;

    World(){
        gameObejcts = new ArrayList<>();
    }
}
